--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build:debug": "set NODE_ENV=debug && gulp build"
+    "build:debug": "gulp build -debug"
   },
   "author": "alisa",
   "license": "ISC",
@@ -22,7 +22,12 @@
     "gulp-newer": "^1.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify-es": "^1.0.1",
+    "linq": "^3.1.0",
+    "merge-stream": "^1.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1"
   }
 }
