--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "args-parser": "^1.1.0",
     "browser-sync": "^2.23.7",
     "browserify": "^16.2.0",
+    "common-bundle": "^0.5.1",
     "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^5.0.0",
