--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "license": "ISC",
   "devDependencies": {
     "args-parser": "^1.1.0",
-    "browser-sync": "^2.23.7",
     "browserify": "^16.2.0",
     "common-bundle": "^0.5.1",
     "del": "^3.0.0",
@@ -19,14 +18,10 @@
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^3.2.0",
     "gulp-if": "^2.0.2",
-    "gulp-json-editor": "^2.3.0",
     "gulp-newer": "^1.4.0",
-    "gulp-rename": "^1.2.2",
     "gulp-uglify-es": "^1.0.1",
     "linq": "^3.1.0",
-    "merge-stream": "^1.0.1",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-buffer": "^1.0.1"
   },
   "dependencies": {
     "jquery": "^3.3.1"
