--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,7 @@
         "es6": true,
         "commonjs": true,
         "browser": true,
-        "node": true
+        "node": true,
+        "webextensions": true
     }
 }
