--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-clean-css": "^3.9.3",
+    "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^3.2.0",
     "gulp-if": "^2.0.2",
     "gulp-newer": "^1.4.0",
     "gulp-uglify-es": "^1.0.1",
     "linq": "^3.1.0",
-    "vinyl-buffer": "^1.0.1"
+    "merge-stream": "^1.0.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "jquery": "^3.3.1"
