--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,11 @@
 	"manifest_version": 2,
 	"name": "Celect",
 	"version": "1.0",
+	"background": {
+		"scripts": [
+			"js/vk_background.js"
+		]
+	},
 	"content_scripts": [
 		{
 			"js": [
@@ -13,5 +18,8 @@
 				"*://vk.com/*"
 			]
 		}
-	]
+	],
+	"browser_action": {
+		"default_title": "Celect VK Tools"
+	}
 }
